<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name" tools:ignore="MissingTranslation">Laser Tag Score Keeper</string>
    //ImageView
    <string name="describe_img">This image is a laser tag facility with bright neon lights which is purely decorative.</string>

    //Title
    <string name="my_points">My Points</string>

    //Individual TextViews
    <string name="individual">Individual</string>
    <string name="tag_opponent" tools:ignore="MissingTranslation">0</string>
    <string name="get_tagged" tools:ignore="MissingTranslation">0</string>
    <string name="tag_teammate" tools:ignore="MissingTranslation">0</string>
    <string name="hit_hq" tools:ignore="MissingTranslation">0</string>


    //Team TextViews
    <string name="team">Team</string>
    <string name="tag_opponent_team" tools:ignore="MissingTranslation">0</string>
    <string name="get_tagged_team" tools:ignore="MissingTranslation">0</string>
    <string name="tag_teammate_team" tools:ignore="MissingTranslation">0</string>
    <string name="hit_hq_team" tools:ignore="MissingTranslation">0</string>

    //Individual Buttons
    <string name="tag_opponent_button">Tag Opponent</string>
    <string name="get_tagged_button">Get Tagged</string>
    <string name="tag_teammate_button">Tag Teammate</string>
    <string name="hit_hq_button">Hit HQ</string>

    //Team Buttons
    <string name="tag_opponent_team_button">Tag Opponent</string>
    <string name="get_tagged_team_button">Get Tagged</string>
    <string name="tag_teammate_team_button">Tag Teammate</string>
    <string name="hit_hq_team_button">Hit HQ</string>

    //Reset Button
    <string name="reset">Reset</string>
</resources>
