<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/my_points_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/lasertag5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/lasertag1"
        android:layout_below="@id/my_points_textview">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/individual_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/text_view_padding"
                android:text="@string/individual"
                android:textColor="@color/accents"
                android:textSize="@dimen/name_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/individual_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_opponent"
                android:gravity="center"
                android:padding="@dimen/text_view_padding"
                android:textSize="@dimen/points_text_size"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginLeft="@dimen/button_margins"
                android:layout_marginRight="@dimen/button_margins"
                android:text="@string/tag_opponent_button"
                android:onClick="addTwoHundredForIndividual"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginLeft="@dimen/button_margins"
                android:layout_marginRight="@dimen/button_margins"
                android:text="@string/get_tagged_button"
                android:onClick="loseHundredForIndividual"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginLeft="@dimen/button_margins"
                android:layout_marginRight="@dimen/button_margins"
                android:text="@string/tag_teammate_button"
                android:onClick="loseOneHundredForIndividual"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginLeft="@dimen/button_margins"
                android:layout_marginRight="@dimen/button_margins"
                android:text="@string/hit_hq_button"
                android:onClick="addThousandForIndividual"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="6dp"
            android:layout_height="500dp"
            android:layout_marginTop="0dp"
            android:background="@color/accents" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="@dimen/text_view_padding"
                android:text="@string/team"
                android:textColor="@color/accents"
                android:textSize="@dimen/name_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_opponent_team"
                android:gravity="center"
                android:padding="@dimen/text_view_padding"
                android:textSize="@dimen/points_text_size"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginLeft="@dimen/button_margins"
                android:layout_marginRight="@dimen/button_margins"
                android:text="@string/tag_opponent_team_button"
                android:onClick="addTwoForTeam"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginLeft="@dimen/button_margins"
                android:layout_marginRight="@dimen/button_margins"
                android:text="@string/get_tagged_team_button"
                android:onClick="loseOneForTeam"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginLeft="@dimen/button_margins"
                android:layout_marginRight="@dimen/button_margins"
                android:text="@string/tag_teammate_team_button"
                android:onClick="loseOnePointForTeam"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginLeft="@dimen/button_margins"
                android:layout_marginRight="@dimen/button_margins"
                android:text="@string/hit_hq_team_button"
                android:onClick="addTenForTeam"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="resetPoints"
        android:text="@string/reset" />


</RelativeLayout>